Finished off PERT's content, see below: *) Inserted images *) Added sources for the images *) Added missing text

--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
@@ -3,6 +3,10 @@
 \label{subsec:Bluetooth}
 Bluetooth ist eine kabellose Variante wie mehrere Geräte über kurze Distanz miteinander Kommunizieren können.
  
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.8\textwidth]{images/bluetooth}
+	\caption{Bluetooth Logo, inspiriert vom König von Norwegen und Dänemark, Harald Blauzahn \cite{PERT.CH2-bluetooth.logo}}\label{Fig:imgBluetoothLogo}
+\end{figure}
 
 \textbf{Kommunikation\nextline}
 Eine Kommunikation mittels Bluetooth kann man in folgende Schritte unterteilen.
