--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -429,3 +429,42 @@ howpublished = "\url{https://github.com/hdodenhof/CircleImageView}",
 note = {Accessed on 30.03.2016}
 }
 
+@misc{PERT.CH2-i2c.logo, 
+    author = {Chris828, Wikimedia User},
+    year = {2016},
+    title = {i2c Logo},
+    howpublished = "\url{https://commons.wikimedia.org/wiki/File:I2c_logo.svg}",
+    note = {Accessed on 31.03.2016}
+}
+
+@misc{PERT.CH2-bluetooth.logo, 
+    author = {Ebrahim, Wikimedia User},
+    year = {2013},
+    title = {Bluetooth Logo},
+    howpublished = "\url{https://commons.wikimedia.org/wiki/File:I2c_logo.svg}",
+    note = {Accessed on 31.03.2016}
+}
+
+@misc{PERT.CH3-carpc.gy521, 
+    author = {EasyWordMall, Amazon Reseller},
+    year = {2015},
+    title = {GY521 Sensor Close-Up},
+    howpublished = "\url{http://www.amazon.de/EasyWordMall-MPU-6050-Achsen-Gyroskop-Beschleunigungsmesser-%20Arduino/dp/B00WHYNF2W/ref=sr_1_12?ie=UTF8&qid=1459344618&sr=8-12&keywords=GY521}",
+    note = {Accessed on 31.03.2016}
+}
+
+@misc{PERT.CH3-carpc.gy521, 
+    author = {EasyWordMall, Amazon Reseller},
+    year = {2015},
+    title = {GY521 Temperatursensor Close-Up},
+    howpublished = "\url{http://www.amazon.de/EasyWordMall-MPU-6050-Achsen-Gyroskop-Beschleunigungsmesser-%20Arduino/dp/B00WHYNF2W/ref=sr_1_12?ie=UTF8&qid=1459344618&sr=8-12&keywords=GY521}",
+    note = {Accessed on 31.03.2016}
+}
+
+@misc{PERT.CH3-carpc.ds1621, 
+    author = {TNE oder Unbekannt, Amazon Reseller},
+    year = {2015},
+    title = {DS1621 Beschleunigungssensor Close-Up},
+    howpublished = "\url{http://www.amazon.de/DS1621-1621-DS1620-Temperatursensor-%20Digitalthermometer/dp/B014I80CGQ/ref=sr_1_1?ie=UTF8&qid=1459344658&sr=8-%201&keywords=DS1621}",
+    note = {Accessed on 31.03.2016}
+}
