--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/i2c.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/i2c.tex
@@ -2,8 +2,13 @@
 \subsubsection{I2C}
 \label{subsec:I2C}
 I2C, Inter Integrated Circuit, ist ein Datenbus bestehend aus zwei Leitungen, einer Datenleitung und einer Taktleitung. Der I2C-Bus eignet sich zur Datenübertragung über kurze Entfernung, beispielsweise auf derselben Platine.
-\nextline
-\textbf{Grundlagen\nextline}
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.5\textwidth]{images/i2c}
+	\caption{Logo von i2c \cite{PERT.CH2-i2c.logo}}\label{Fig:imgi2cLogo}
+\end{figure}
+
+\textbf{Grundlagen\newline}
 Der I2C-Bus baut auf einem Master-Slave System auf, dass bedeutet es existiert mindestens ein Master und bis zu 127 Slaves auf einem Bus. I2C ist unter anderem ein Multi-Master-Bus, was bedeuted es können mehrere Master zur selben Zeit existieren und der Bus ist noch Lauffähig.
 Alle Teilnehmer am Bus erhalten eine eindeutige Adresse. Ein Master kann mithilfe dieser Adresse Daten senden oder empfangen.
 \nextline
