--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/singleboard.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/singleboard.tex
@@ -1,10 +1,10 @@
 \lfoot{Autor: Tobias Perny}
 \subsubsection{Single-Board-PC}
 \label{subsec:Single-Board-PC}
-Ein Single-Board-PC ist ein PC, welcher aus einer einzingen Platine besteht. Auf dieser Platine befinden sich alle Komponenten, die für einen PC als notwendig gelten, mindestens ein Prozessor, RAM. 
+Ein Single-Board-PC ist ein PC, welcher aus einer einzigen Platine besteht. Auf dieser Platine befinden sich alle Komponenten, die für einen PC als notwendig gelten, mindestens ein Prozessor, RAM. 
 \nextline
 \textbf{Unterschied zu Mikrocontroller\nextline}
-Der wohl größte Unterschied von SBC’s und Microkontrollern ist wohl der, dass Singleboard Computer in der Lage sind ein Betriebsystem auszuführen. Ein Microkontroller wird für weniger komplexe Aufgaben eingesetzt als ein Singleboard Computer.
+Der wohl größte Unterschied von SBC’s und Mikrokontrollern ist wohl der, dass Singleboard Computer in der Lage sind ein Betriebsystem auszuführen. Ein Mikrokontroller wird für weniger komplexe Aufgaben eingesetzt als ein Singleboard Computer.
 
 
 \clearpage % DO NOT REMOVE
